--- a/www/css/style.css
+++ b/www/css/style.css
@@ -383,3 +383,8 @@ input[type=checkbox] { visibility: hidden; }
     height: 100%;
     background-color: transparent;
 }
+
+.search-btn{
+    border: 2px solid #fff !important;
+    padding: 10px 2px 10px 2px !important;
+}
