--- a/www/css/style.css
+++ b/www/css/style.css
@@ -390,3 +390,7 @@ input[type=checkbox] { visibility: hidden; }
     /* border-radius: 0px !important; */
     margin: 0px !important;
 }
+
+.col-0, .col-sm-0, .col-md-1, .col-lg-2{
+    z-index: -10;
+}
