--- a/www/css/style.css
+++ b/www/css/style.css
@@ -391,7 +391,7 @@ input[type=checkbox] { visibility: hidden; }
     margin: 0px !important;
 }
 
-.right.col-0, .right.col-sm-0, .right.col-md-1, .right.col-lg-2,
-.left.col-0, .left.col-sm-0, .left.col-md-1, .left.col-lg-2{
+#edit.col-0, #edit.col-sm-0, #edit.col-md-1, #edit.col-lg-2,
+#create.col-0, #create.col-sm-0, #create.col-md-1, #create.col-lg-2{
     z-index: -10;
 }
