--- a/www/css/style.css
+++ b/www/css/style.css
@@ -242,7 +242,7 @@ input[type=checkbox] { visibility: hidden; }
     height: auto;
     position: relative;
     overflow-y: auto;
-    border-right: 1px solid #fff;
+    border: 1px solid #fff;
   }
 }
 
