--- a/www/css/style.css
+++ b/www/css/style.css
@@ -419,8 +419,8 @@ input[type=checkbox] { visibility: hidden; }
 }
 @media screen and (max-width: 1024px) {
     .browse-entry {
-        display: block;
-        width: 90%;
-        margin: 10%;
+        display: block !important;
+        width: 90% !important;
+        margin: 10% !important;
     }
     }
