--- a/www/css/style.css
+++ b/www/css/style.css
@@ -427,5 +427,6 @@ input[type=checkbox] { visibility: hidden; }
 @media screen and (max-width: 1024px) {
     .browse-entry {
         display: block !important;
+        width: 90%;
     }
     }
