--- a/www/css/style.css
+++ b/www/css/style.css
@@ -410,7 +410,7 @@ input[type=checkbox] { visibility: hidden; }
 
 .browse-entry {
     width: 284px;
-    height: 512px;
+    height: auto;
     padding-top: 14px;
     padding-bottom: 14px;
     text-align: center;
