--- a/www/css/style.css
+++ b/www/css/style.css
@@ -426,5 +426,5 @@ input[type=checkbox] { visibility: hidden; }
 }
 
 .browse-entry:hover {
-    border: 3px solid #0f0;
+    border: 3px solid #0f0 !important;
 }
