--- a/www/css/style.css
+++ b/www/css/style.css
@@ -260,9 +260,18 @@ input[type=checkbox] { visibility: hidden; }
     /* border-bottom: 1px solid #fff; */
     height: 47px;
   }
+.topnav-background {
+    overflow: hidden;
+    z-index: 9;
+    position: fixed;
+    /* border-bottom: 1px solid #fff; */
+    height: 47px;
+    width:100%;
+    background: linear-gradient(45deg,black 50%, transparent);
+}
   
 .topnav a {
-    float: right;
+    float: left;
     display: block;
     color: #f2f2f2;
     text-align: center;
