--- a/www/css/style.css
+++ b/www/css/style.css
@@ -214,7 +214,8 @@ input[type=checkbox] { visibility: hidden; }
     height: auto;
 }
 
-.CodeMirror > * {
+div.CodeMirror,
+div.CodeMirror > * {
     color: #000 !important;
 }
 
