--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,6 +4,7 @@
   /* font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace !important; */
   font-weight: bold!important;
   font-size: 14px !important;
+  color: #fff;
 }
 #background_iframe {
     position: fixed;
@@ -206,14 +207,18 @@ input[type=checkbox] { visibility: hidden; }
     background: #0f0;
 }
 
-
 .CodeMirror{    
+    border: 2px solid #fff !important;
+    padding: 10px !important;
     height: auto;
 }
-
 .CodeMirror-code{
     text-align: left !important;
 } 
+.cm-builtin{
+    color: #fff !important;
+}
+
 .split { 
     width: 50%;
     height: 100%;
