--- a/www/css/style.css
+++ b/www/css/style.css
@@ -207,6 +207,14 @@ input[type=checkbox] { visibility: hidden; }
     background: #0f0;
 }
 
+.CodeMirror{    
+    border: 1px solid #fff !important;
+    /* height: auto; */
+}
+.CodeMirror-sizer {
+    /* min-height: auto !important; */
+}
+
 .CodeMirror-code{
     text-align: left !important;
 } 
