--- a/www/css/style.css
+++ b/www/css/style.css
@@ -207,19 +207,10 @@ input[type=checkbox] { visibility: hidden; }
     background: #0f0;
 }
 
-.CodeMirror{    
-    border: 2px solid #fff !important;
-    height: 768px;
-}
-.CodeMirror-sizer {
-    /* min-height: auto !important; */
-}
-
-.CodeMirror-code{
-    text-align: left !important;
-} 
-.cm-builtin{
-    color: #fff !important;
+.autoresizing {
+    display: block;
+    overflow: hidden;
+    resize: none;
 }
 
 .split { 
