--- a/www/css/style.css
+++ b/www/css/style.css
@@ -432,6 +432,6 @@ input[type=checkbox] { visibility: hidden; }
 
 .CodeMirror {
     text-align: left !important;
-    /* height: auto;     */
+    height: 768px;
     border: 1px solid #fff;
 }
