--- a/www/css/style.css
+++ b/www/css/style.css
@@ -217,6 +217,10 @@ input[type=checkbox] { visibility: hidden; }
     height: 100%;
     position: absolute;
     overflow-y: auto;
+    border-top: 1px solid #fff;
+    border-left: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    border-right: 1px solid #fff;
 }
 /* Control the left side */
 .left {
